include/dss_capi.h

    DSS_CAPI_DLL double WireData_Get_Rdc(void);
    DSS_CAPI_DLL void WireData_Set_Rdc(double Value);
    DSS_CAPI_DLL double WireData_Get_Rac(void);
    DSS_CAPI_DLL void WireData_Set_Rac(double Value);
    DSS_CAPI_DLL double WireData_Get_GMRac(void);
    DSS_CAPI_DLL void WireData_Set_GMRac(double Value);
    DSS_CAPI_DLL int32_t WireData_Get_GMRUnits(void);
    DSS_CAPI_DLL void WireData_Set_GMRUnits(int32_t Value);
    DSS_CAPI_DLL double WireData_Get_Radius(void);
    DSS_CAPI_DLL void WireData_Set_Radius(double Value);
    DSS_CAPI_DLL int32_t WireData_Get_RadiusUnits(void);
    DSS_CAPI_DLL void WireData_Set_RadiusUnits(int32_t Value);
    DSS_CAPI_DLL int32_t WireData_Get_ResistanceUnits(void);
    DSS_CAPI_DLL void WireData_Set_ResistanceUnits(int32_t Value);
    DSS_CAPI_DLL double WireData_Get_Diameter(void);
    DSS_CAPI_DLL void WireData_Set_Diameter(double Value);
    DSS_CAPI_DLL double WireData_Get_EmergAmps(void);
    DSS_CAPI_DLL void WireData_Set_EmergAmps(double Value);
    DSS_CAPI_DLL int32_t WireData_Get_idx(void);
    DSS_CAPI_DLL void WireData_Set_idx(int32_t Value);