src/v7/CAPI_WireData.pas


end;
//------------------------------------------------------------------------------
function WireData_Get_EmergAmps(): Double; CDECL;
var
    pWireData: TWireDataObj;
begin
    Result := 0;
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        Result := pWireData.EmergAmps;
    end;
end;
//------------------------------------------------------------------------------
procedure WireData_Set_EmergAmps(Value: Double); CDECL;
var
    pWireData: TWireDataObj;
begin
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        pWireData.EmergAmps := Value;
        ConductorSetDefaults(ConductorProps.EmergAmps, pWireData);
    end;
end;
//------------------------------------------------------------------------------
function WireData_Get_Diameter(): Double; CDECL;
var
    pWireData: TWireDataObj;
begin
    Result := 0;
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        Result := pWireData.FRadius * 2.0;
    end;
end;
//------------------------------------------------------------------------------
procedure WireData_Set_Diameter(Value: Double); CDECL;
var
    pWireData: TWireDataObj;
begin
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        with pWireData do
        begin
            FRadius := Value / 2.0;
            ConductorSetDefaults(ConductorProps.diam, pWireData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function WireData_Get_Radius(): Double; CDECL;
var
    pWireData: TWireDataObj;
begin
    Result := 0;
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        Result := pWireData.FRadius;
    end;
end;
//------------------------------------------------------------------------------
procedure WireData_Set_Radius(Value: Double); CDECL;
var
    pWireData: TWireDataObj;
begin
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        with pWireData do
        begin
            FRadius := Value;
            ConductorSetDefaults(ConductorProps.Radius, pWireData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function WireData_Get_GMRac(): Double; CDECL;
var
    pWireData: TWireDataObj;
begin
    Result := 0;
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        Result := pWireData.FGMR60;
    end;
end;
//------------------------------------------------------------------------------
procedure WireData_Set_GMRac(Value: Double); CDECL;
var
    pWireData: TWireDataObj;
begin
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        with pWireData do
        begin
            FGMR60 := Value;
            ConductorSetDefaults(ConductorProps.GMRac, pWireData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function WireData_Get_Rac(): Double; CDECL;
var
    pWireData: TWireDataObj;
begin
    Result := 0;
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        Result := pWireData.FR60;
    end;
end;
//------------------------------------------------------------------------------
procedure WireData_Set_Rac(Value: Double); CDECL;
var
    pWireData: TWireDataObj;
begin
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        with pWireData do
        begin
            FR60 := Value;
            ConductorSetDefaults(ConductorProps.Rac, pWireData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function WireData_Get_Rdc(): Double; CDECL;
var
    pWireData: TWireDataObj;
begin
    Result := 0;
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        Result := pWireData.FRDC;
    end;
end;
//------------------------------------------------------------------------------
procedure WireData_Set_Rdc(Value: Double); CDECL;
var
    pWireData: TWireDataObj;
begin
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        with pWireData do
        begin
            FRDC := Value;
            ConductorSetDefaults(ConductorProps.Rdc, pWireData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function WireData_Get_GMRUnits(): Integer; CDECL;
var
    pWireData: TWireDataObj;
begin
    Result := 0;
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        Result := pWireData.FGMRUnits;
    end;
end;
//------------------------------------------------------------------------------
procedure WireData_Set_GMRUnits(Value: Integer); CDECL;
var
    pWireData: TWireDataObj;
begin
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        with pWireData do
        begin
            FGMRUnits := Value;
            ConductorSetDefaults(ConductorProps.GMRunits, pWireData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function WireData_Get_RadiusUnits(): Integer; CDECL;
var
    pWireData: TWireDataObj;
begin
    Result := 0;
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        Result := pWireData.FRadiusUnits;
    end;
end;

//------------------------------------------------------------------------------
procedure WireData_Set_RadiusUnits(Value: Integer); CDECL;
var
    pWireData: TWireDataObj;
begin
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        with pWireData do
        begin
            FRadiusUnits := Value;
            ConductorSetDefaults(ConductorProps.radunits, pWireData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function WireData_Get_ResistanceUnits(): Integer; CDECL;
var
    pWireData: TWireDataObj;
begin
    Result := 0;
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        Result := pWireData.FResistanceUnits;
    end;
end;
//------------------------------------------------------------------------------
procedure WireData_Set_ResistanceUnits(Value: Integer); CDECL;
var
    pWireData: TWireDataObj;
begin
    if DSSPrime.ActiveCircuit <> NIL then
    begin
        pWireData := DSSPrime.WireDataClass.GetActiveObj;
        with pWireData do
        begin
            FResistanceUnits := Value;
            ConductorSetDefaults(ConductorProps.Runits, pWireData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function WireData_Get_idx(): Integer; CDECL;
begin
    Result := DSSPrime.WireDataClass.ElementList.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure WireData_Set_idx(Value: Integer); CDECL;
begin
    if DSSPrime.WireDataClass.ElementList.Get(Value) = NIL then
        DoSimpleMsg(DSSPrime, 'Invalid WireData index: "' + IntToStr(Value) + '".', 656565);
end;
//------------------------------------------------------------------------------
end.
